style(PreviewPage): fix on line spacing and alignments on PreviewPage component

--- a/src/styles/base/TextWithIcon.css
+++ b/src/styles/base/TextWithIcon.css
@@ -1,6 +1,6 @@
 .text-with-icon {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   gap: 0.5em;
 }
 
@@ -10,7 +10,3 @@
   width: 1.1em;
   height: 1.1em;
 }
-
-/* .text-with-icon {
-  vertical-align: center;
-} */
